@@ -15,7 +15,7 @@
 #  13-Mar-2019 jdw add getCollectionVersion() and getCollectionInfo() and remove getCollections().
 #   6-Sep-2019 jdw incorporate search type and brief descriptions
 #  23-Oct-2019 jdw add collection subcategory nested property support
-#
+#  28-Feb-2022 bv add method getSubCategoryAggregateMandatory()
 ##
 """
 Inject additional document information into a schema definition.
@@ -195,6 +195,18 @@ class DocumentDefinitionHelper(object):
                 for dD in self.__cfgD["collection_subcategory_aggregates"][collectionName]:
                     if dD["NAME"] == subCategoryName:
                         ret = dD["HAS_UNIT_CARDINALITY"]
+                        break
+        except Exception as e:
+            logger.debug("Collection %s failing with %s", collectionName, str(e))
+        return ret
+
+    def getSubCategoryAggregateMandatory(self, collectionName, subCategoryName):
+        ret = False
+        try:
+            if collectionName in self.__cfgD["collection_subcategory_aggregates"]:
+                for dD in self.__cfgD["collection_subcategory_aggregates"][collectionName]:
+                    if dD["NAME"] == subCategoryName:
+                        ret = dD["MANDATORY"]
                         break
         except Exception as e:
             logger.debug("Collection %s failing with %s", collectionName, str(e))
