@@ -605,6 +605,8 @@ class PdbxLoader(object):
             locatorObjList = self.__rpP.getLocatorObjList(contentType=databaseName, inputPathList=inputPathList, inputIdCodeList=inputIdCodeList, mergeContentTypes=mergeContentTypes)
             logger.info("Loading database %s (%r) with path length %d", databaseName, loadType, len(locatorObjList))
             #
+            compModelIdMapD = self.__rpP.getCompModelIdMap() if databaseName in ["pdbx_comp_model_core"] else None
+            #
             if saveInputFileListPath:
                 self.__writePathList(saveInputFileListPath, self.__rpP.getLocatorPaths(locatorObjList))
                 logger.info("Saving %d paths in %s", len(locatorObjList), saveInputFileListPath)
@@ -626,6 +628,7 @@ class PdbxLoader(object):
             optD["validationLevel"] = validationLevel
             optD["validateFailures"] = validateFailures
             optD["reloadPartial"] = reloadPartial
+            optD["compModelIdMapD"] = compModelIdMapD
             # ---------------- - ---------------- - ---------------- - ---------------- - ---------------- -
             #
 
@@ -766,6 +769,7 @@ class PdbxLoader(object):
             validationLevel = optionsD["validationLevel"]
             validateFailures = optionsD["validateFailures"]
             reloadPartial = optionsD["reloadPartial"]
+            compModelIdMapD = optionsD["compModelIdMapD"]
             #
             sdp = SchemaDefDataPrep(schemaDefAccessObj=sd, dtObj=dtf, workPath=workingDir, verbose=self.__verbose)
             # -------------------------------------------
@@ -783,8 +787,25 @@ class PdbxLoader(object):
                     cId = cL[0].getName() if useNameFlag else cL[0].getProp("uid")
                     cIdD[cId] = locatorObj
                     containerList.extend(cL)
-            # -- Apply methods to each container -
+            #
             for container in containerList:
+                # -- Assign temporary attribute with internal identifier for computed models
+                if databaseName in ["pdbx_comp_model_core"]:
+                    eObj = container.getObj("entry")
+                    sourceId = eObj.getValue("id", 0)
+                    compModelInternalId = compModelIdMapD.get(sourceId, sourceId)
+                    if sourceId == compModelInternalId:
+                        logger.warning("Unable to map computed-model sourceId (%s) to internal identifier. Will use original source ID as internal ID (rcsb_id).", sourceId)
+                    if eObj.hasAttribute("rcsb_comp_model_id"):
+                        logger.error(
+                            "Computed-model of sourceId (%s) already has attribute 'entry.rcsb_comp_model_id' of %r. Will attempt to overwrite with mapped value %s.",
+                            sourceId,
+                            eObj.getValue("rcsb_comp_model_id", 0),
+                            compModelInternalId
+                        )
+                    eObj.appendAttribute("rcsb_comp_model_id")
+                    eObj.setValue(compModelInternalId, "rcsb_comp_model_id")
+                # -- Apply methods to each container
                 if self.__dmh:
                     self.__dmh.apply(container)
                 else:
