@@ -332,3 +332,6 @@
  30-Mar-2022  V1.700 Add pdbx_comp_model_core database to CLI commands, and
                      Add support for loading id code lists for mongo PdbxLoader() (preliminary)
                      Exclude 'ma_' categories from being declared as mandatory
+ 20-Apr-2022  V1.701 Adding support for computed-model loading;
+                     Updates to handle comp model local and global scores, as well as internal identifiers;
+                     Add testRepoHoldingsRemoteDataPrep test case
